--- a/src/components/ImageModal/ImageModal.module.scss
+++ b/src/components/ImageModal/ImageModal.module.scss
@@ -1,24 +1,29 @@
-.ImageModal{
-    z-index: 5;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(255, 255, 255, 0.5); /* Adjust the alpha value for transparency */
-    backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
+.ImageModal {
+  z-index: 5;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.5
+  ); /* Adjust the alpha value for transparency */
+  backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  div {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    margin-top: 33px;
     align-items: center;
-    cursor: pointer;
-    
-    div{
-        display: flex;
-        flex-direction: column;
-        margin-top: 33px;
-        align-items: center;
-        img{
-            cursor: auto;
-            width: 50%;
-            height: auto;
-        }
+    img {
+      cursor: auto;
+      width: 50%;
+      height: auto;
     }
+  }
 }
