--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -1,14 +1,15 @@
 .Post {
   padding: 10px;
   width: 60vw;
-  height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 15px;
   max-width: 1000px;
   max-height: 600px;
-  border-bottom: solid 1px rgb(100, 100, 100);
+  border: solid 1px rgb(100, 100, 100);
+  border-radius: 5px;
+  background-color: rgb(36, 38, 39);
   .upper {
     display: flex;
     flex-direction: column;
@@ -39,19 +40,20 @@
     }
   }
   .body {
-    width: 95%;
-    height: 60vh;
+    width: 100%;
     border-radius: 10px;
     overflow-y: hidden;
     background-color: rgb(100, 100, 100);
-    .postText {
-      width: 100%;
-      height: 100%;
-      background-color: rgb(150, 150, 150);
-      border-radius: 10px;
-      color: rgb(28, 28, 28);
-      font-size: calc(1vw + 1.5vh);
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box; /* Include padding and border in total width */
+  }
+
+  .postText {
+    width: 100%;
+    padding: 10px; /* Example padding for content spacing */
+    box-sizing: border-box; /* Ensure padding does not affect width */
   }
   .bottom {
     height: 5vh;
