--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,8 +1,10 @@
 .HomePage {
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
-  max-height: 3000px;
+  align-items: center;
+  max-height: 4000px;
   width: 100vw;
   max-width: 2500px;
   margin: 0 auto;
@@ -11,253 +13,272 @@
     min-width: 50px;
     max-width: 3vw;
   }
-  .userInfo,
-  .homePosts,
-  .explore {
+  .mainBody {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-
-    h1 {
-      width: 15vw;
-      color: white;
+    .userInfo,
+    .homePosts,
+    .explore {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-      font-weight: 500;
-    }
-  }
-  .userInfo {
-    width: 15vw;
-    margin-top: 1vh;
-    height: 100vh;
-    padding-right: 1px;
-    border-right: solid rgb(100, 100, 100) 1px;
-    border-left: solid rgb(100, 100, 100) 0.3px;
-    border-bottom: solid rgb(100, 100, 100) 1px;
-    display: flex;
-    flex-direction: column;
-    .pageTitle {
-      font-size: 50px;
-      color: rgb(191, 63, 27);
-    }
-    .profilePic {
-      margin-top: 10px;
-      width: 8vw;
-      height: 8vw;
-      border-radius: 100%;
-      border: solid 1px rgb(100, 100, 100);
-    }
-    .userForums {
-      margin-top: 10px;
-      width: 100%;
-      height: 40%;
-      display: flex;
-      justify-content: flex-start;
       flex-direction: column;
+      justify-content: flex-start;
       align-items: center;
-      h2 {
+
+      h1 {
+        width: 15vw;
         color: white;
-        width: 90%;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-weight: bold;
-        height: 5vh;
-        overflow-x: scroll;
-        border-bottom: solid rgb(100, 100, 100) 1px;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-        &::-webkit-scrollbar {
-          display: none;
+        font-size: 20px;
+        font-weight: 500;
+      }
+    }
+    .userInfo {
+      width: 15vw;
+      margin-top: 1vh;
+      height: 100vh;
+      padding-right: 1px;
+      border-right: solid rgb(100, 100, 100) 1px;
+      border-left: solid rgb(100, 100, 100) 0.3px;
+      border-bottom: solid rgb(100, 100, 100) 1px;
+      display: flex;
+      flex-direction: column;
+      .pageTitle {
+        font-size: 50px;
+        color: rgb(191, 63, 27);
+      }
+      .profilePic {
+        margin-top: 10px;
+        width: 8vw;
+        height: 8vw;
+        border-radius: 100%;
+        border: solid 1px rgb(100, 100, 100);
+      }
+      .userForums {
+        margin-top: 10px;
+        width: 100%;
+        height: 40%;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        align-items: center;
+        h2 {
+          color: white;
+          width: 90%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-weight: bold;
+          height: 5vh;
+          overflow-x: scroll;
+          border-bottom: solid rgb(100, 100, 100) 1px;
+          -ms-overflow-style: none;
+          scrollbar-width: none;
+          &::-webkit-scrollbar {
+            display: none;
+          }
+        }
+        .userForum {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          padding-left: 10%;
+          margin-top: 3px;
+          color: white;
+          color: rgb(200, 200, 200);
+          margin-top: 20px;
+          height: 2.5vh;
+          width: 90%;
+          // border-bottom: solid 1px rgb(100, 100, 100);
+        }
+        .userForum:hover {
+          margin-left: 10px;
         }
       }
-      .userForum {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        padding-left: 10%;
-        margin-top: 3px;
-        color: white;
-        color: rgb(200, 200, 200);
-        margin-top: 20px;
-        height: 2.5vh;
-        width: 90%;
-        // border-bottom: solid 1px rgb(100, 100, 100);
-      }
-      .userForum:hover {
-        margin-left: 10px;
+    }
+    .homePosts {
+      width: 70vw;
+      max-width: 1500px;
+      .postList {
+        margin-top: 7vh;
       }
     }
-  }
-  .homePosts {
-    width: 70vw;
-    max-width: 1500px;
-    .postList {
-      margin-top: 7vh;
-    }
-  }
-  .explore {
-    width: 15vw;
-    height: 60vh;
-    margin-top: 1vh;
-    background-color: black;
-    max-width: 500px;
-    max-height: 600px;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-      display: none;
-    }
-    .createPost {
-      color: #ff6410;
-      font-size: 25px;
-      width: 100%;
-      font-weight: bold;
-    }
-    .exploreHeading {
-      width: 100%;
-      height: 10vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      h1 {
-        color: white;
-        display: flex;
-        justify-content: flex-end;
-        width: 40%;
-        margin: 4px;
-      }
-    }
-    .forumList {
-      color: rgb(200, 200, 200);
+    .explore {
+      width: 15vw;
       height: 60vh;
-      width: 100%;
+      margin-top: 1vh;
+      background-color: black;
+      max-width: 500px;
+      max-height: 600px;
       overflow-y: scroll;
       -ms-overflow-style: none;
       scrollbar-width: none;
       &::-webkit-scrollbar {
         display: none;
       }
-
-      p {
-        margin-top: 2px;
+      .createPost {
+        color: #ff6410;
+        font-size: 25px;
+        width: 100%;
+        font-weight: bold;
+      }
+      .exploreHeading {
+        width: 100%;
+        height: 10vh;
         display: flex;
         align-items: center;
         justify-content: center;
-        max-height: 50px;
-        margin-top: 2px;
-        height: 5vh;
-        width: 13vw;
-        border-bottom: solid 1px rgb(100, 100, 100);
+        h1 {
+          color: white;
+          display: flex;
+          justify-content: flex-end;
+          width: 40%;
+          margin: 4px;
+        }
       }
-      p:hover {
-        height: 5.5vh;
-        width: 13.5vw;
+      .forumList {
+        color: rgb(200, 200, 200);
+        height: 60vh;
+        width: 100%;
+        overflow-y: scroll;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+        p {
+          margin-top: 2px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          max-height: 50px;
+          margin-top: 2px;
+          height: 5vh;
+          width: 13vw;
+          border-bottom: solid 1px rgb(100, 100, 100);
+        }
+        p:hover {
+          height: 5.5vh;
+          width: 13.5vw;
+        }
+      }
+    }
+  }
+
+  .footer {
+    margin-top: 10px;
+    width: 100%;
+    background-color: red;
+    height: 200px;
+    max-width: 3000px;
+    display: flex;
+    color: white;
+    .theFooter {
+      background-color: rgb(64, 32, 60);
+      background-color: rgb(36, 30, 60);
+
+      display: flex;
+      height: 350px;
+      width: 100vw;
+      flex-direction: column;
+      .upperSection {
+        display: flex;
+        height: 90%;
+        align-items: center;
+        h3 {
+          width: 100%;
+          font-size: larger;
+          font-weight: bold;
+          padding-left: 10%;
+          text-decoration: underline;
+        }
+        #headings {
+          border-bottom: solid 1px white;
+          border-right: solid 1px white;
+        }
+        .footerSection1 {
+          height: 100%;
+          width: 45%;
+
+          .contactSection {
+            height: 90%;
+            display: flex;
+            justify-content: space-evenly;
+            .contactSection1 {
+              width: 45%;
+
+              .infoSection {
+                height: 90%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-evenly;
+              }
+            }
+            .contactSection2 {
+              width: 45%;
+              border-left: solid 1px white;
+
+              .infoSection {
+                height: 90%;
+                flex-direction: column;
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+              }
+            }
+          }
+        }
+        .footerSection2 {
+          height: 100%;
+          width: 35%;
+          h3 {
+            width: 100%;
+            font-size: larger;
+            font-weight: bold;
+            padding-left: 10%;
+            text-decoration: underline;
+          }
+          .industriesDiv {
+            padding-left: 10%;
+            height: 90%;
+            border-left: solid 1px white;
+            display: flex;
+            justify-content: space-evenly;
+            flex-direction: column;
+          }
+        }
+        .footerSection3 {
+          width: 20%;
+          height: 100%;
+          h3 {
+            width: 100%;
+            font-size: larger;
+            font-weight: bold;
+            padding-left: 10%;
+            text-decoration: underline;
+          }
+          .linksDiv {
+            height: 90%;
+            border-left: solid 1px white;
+
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+          }
+        }
+      }
+      .lowerSection {
+        height: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        border-top: solid 1px white;
+        h4:hover {
+          cursor: pointer;
+        }
       }
     }
   }
 }
-
-// @keyframes fadeIn {
-//   0% {
-//     opacity: 0;
-//   }
-
-//   100% {
-//     opacity: 1;
-//   }
-// }
-
-// @media (max-width: 900px) {
-//   .HomePage {
-//     width: 95vw;
-//     overflow-x: hidden;
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: flex-start;
-//     h4 {
-//       color: black;
-//     }
-
-//     .buttonDiv {
-//       top: 20vh;
-//       width: 90vw;
-//       margin-left: 5vw;
-//       border-radius: 3px;
-//       height: 15vw;
-//       left: 0;
-//       flex-direction: row;
-//       justify-content: space-evenly;
-//       align-items: center;
-//       overflow-x: scroll;
-//       overflow-y: hidden;
-//       h4 {
-//         display: none;
-//       }
-//       li {
-//         font-size: 10px;
-//         border-radius: 3px;
-//         box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-//           rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-//           rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-//       }
-//     }
-
-//     button {
-//       align-self: center;
-//     }
-
-//     #name {
-//     }
-
-//     .hidden {
-//     }
-
-//     .userInfo {
-//       margin-left: 0px;
-//       top: 12vh;
-//       width: 100vw;
-//       height: 5vh;
-//       display: flex;
-//       flex-direction: row;
-//       justify-content: space-evenly;
-//       align-items: center;
-//       .userPic {
-//         height: 5vh;
-//         width: 5vh;
-//         margin-top: 0;
-//         img {
-//           height: 5vh;
-//           width: 5vh;
-//         }
-//       }
-//       .userPic:hover {
-//         cursor: pointer;
-//       }
-
-//       .username {
-//         width: 40vw;
-//         display: flex;
-//         justify-content: flex-start;
-//         align-items: center;
-//       }
-
-//       .userForums {
-//         display: none;
-//         height: 0;
-//         width: 0;
-//         li {
-//         }
-//         li:hover {
-//           cursor: pointer;
-//         }
-//         .forumTitles {
-//         }
-//       }
-//     }
-//   }
-// }
