--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,20 +1,82 @@
 .LoginPage {
   display: flex;
-  justify-content: center;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
   align-items: center;
-  height: 96vh;
+  height: 100vh;
   max-height: 3000px;
   width: 100vw;
   //max-width: 1940px;
   margin: 0 auto;
   color: white;
   background-color: black;
-  .leftSide {
-    width: 50%;
-    height: 100%;
+  max-height: 3000px;
+  width: 100vw;
+  max-width: 2500px;
+  margin: 0 auto;
+  .showDetails {
+    z-index: 5;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(
+      255,
+      255,
+      255,
+      0.5
+    ); /* Adjust the alpha value for transparency */
+    backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    cursor: pointer;
+    .desModal {
+      display: flex;
+      flex-direction: column;
+      margin-top: 20vh;
+      width: 50%;
+      background-color: rgb(16, 18, 19);
+      border-radius: 7px;
+      padding: 20px;
+      height: 66%;
+      h1 {
+        font-size: 40px;
+        color: rgb(191, 63, 27);
+      }
+      .desText {
+        font-size: 15px;
+      }
+      span {
+        font-weight: bold;
+      }
+    }
+  }
+  .leftSide {
+    border-radius: 7px;
+    background-color: rgb(16, 18, 19);
+    border: solid 1px rgb(100, 100, 100);
+    width: 40%;
+    height: 80%;
+    animation: myAni 0.34s;
+    max-width: 1000px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    .hDiv {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      height: 100px;
+      width: 25vw;
+      h1 {
+        font-size: 30px;
+      }
+      h2 {
+        color: rgb(191, 63, 27);
+        font-size: 20px;
+      }
+    }
     .logoDiv {
       height: 15vh;
       display: flex;
@@ -40,14 +102,15 @@
         margin-top: 10px;
         border-radius: 5px;
         max-width: 500px;
-        background-color: black;
+        background-color: rgb(16, 18, 19);
         color: white;
       }
       .submit:hover {
-        color: aquamarine;
+        color: rgb(191, 63, 27);
       }
       .text {
         font-weight: 700;
+        color: rgb(191, 63, 27);
       }
       .inputText {
         color: white;
@@ -67,15 +130,16 @@
     }
     .signupButton:hover {
       cursor: pointer;
-      color: aquamarine;
+      color: rgb(191, 63, 27);
     }
   }
   .rightSide {
-    width: 50%;
-    height: 100%;
+    width: 150px;
+    height: 150px;
+    background-color: pink;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
   }
 }
 
@@ -84,25 +148,38 @@
   }
 }
 
-// @media (prefers-color-scheme: dark) {
-//   .LoginPage {
-//     color: #ff6410;
-//     background-color: rgb(28, 28, 28);
-//     background-image: none;
-//     background-size: cover;
-
-//     h2 {
-//       color: #ff6410;
-//     }
-
-//     .title {
-//       color: white;
-//     }
-
-//     h1 {
-//       p {
-//         color: #ff6410;
-//       }
-//     }
-//   }
-// }
+@keyframes myAni {
+  0% {
+    transform: translateY(200px);
+  }
+  10% {
+    transform: translateY(180px);
+  }
+  20% {
+    transform: translateY(160px);
+  }
+  30% {
+    transform: translateY(140px);
+  }
+  40% {
+    transform: translateY(120px);
+  }
+  50% {
+    transform: translateY(100px);
+  }
+  60% {
+    transform: translateY(80px);
+  }
+  70% {
+    transform: translateY(60px);
+  }
+  80% {
+    transform: translateY(40px);
+  }
+  90% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
