--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -7,12 +7,15 @@
   max-width: 2500px;
   margin: 0 auto;
   .allForumsAside {
+    margin-top: 10px;
+    border-top: solid 1px rgb(100, 100, 100);
     .pageTitle {
       font-size: 50px;
       color: rgb(191, 63, 27);
     }
     width: 15vw;
     height: 100vh;
+    max-height: 1000px;
     max-width: 500px;
     border-right: solid 1px rgb(100, 100, 100);
     border-left: solid 0.3px rgb(100, 100, 100);
@@ -49,31 +52,50 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    max-height: 1500px;
     header {
-      height: 10vh;
+      border: solid 0.05px rgb(100, 100, 100);
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      height: 15vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       max-width: 150px;
       color: white;
       width: 60vw;
-      max-width: 1300px;
-      border-bottom: solid 1px rgb(100, 100, 100);
+      max-width: 1400px;
+      border-bottom: none;
+      background-color: rgb(36, 38, 39);
       .headerClickables {
       }
       #sender {
         padding-left: 20px;
         max-width: 150px;
+        margin-top: 5px;
+        font-size: min(130px, 15px);
       }
       #postTitle {
         max-width: 500px;
         padding-left: 20px;
         font-size: 20px;
+        font-size: min(130px, 20px);
+        font-weight: bold;
+        margin-top: 5px;
       }
       #postForum {
-        max-width: 150px;
+        margin-top: 5px;
+        max-width: 100px;
         margin-left: 20px;
         background-color: rgb(35, 73, 175);
         border-radius: 10px;
         width: 10vw;
-        padding-right: 5px;
+        padding: 2px;
+        padding-left: 5px;
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+          rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+        font-size: min(130px, 10px);
       }
       .headerClickables:hover {
         cursor: pointer;
@@ -86,39 +108,46 @@
       align-items: center;
       height: 50vh;
       //background-color: rgb(190, 190, 190);
-      width: 70vw;
-      max-width: 1000px;
+      width: 60vw;
+      max-width: 1400px;
+      border-left: solid 0.3px rgb(100, 100, 100);
+      border-right: solid 0.3px rgb(100, 100, 100);
+      background-color: rgb(36, 38, 39);
     }
     .interactions {
       display: flex;
-      height: 5vh;
+      height: 30px;
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      width: 100%;
-      width: 90%;
+      width: 60vw;
       color: white;
+      border-left: solid 0.3px rgb(100, 100, 100);
+      border-right: solid 0.3px rgb(100, 100, 100);
+      max-width: 1400px;
+      background-color: rgb(36, 38, 39);
+
       .disklikes:hover {
       }
       h4 {
         padding-left: 10px;
         width: 100px;
-        font-size: 15px;
+        font-size: min(50px, 15px);
       }
     }
     h4:hover {
       cursor: pointer;
     }
     p {
-      background-color: rgb(100, 100, 100);
-      width: 60vw;
-      max-width: 1000px;
+      background-color: rgb(220, 220, 220);
+      width: 58vw;
       display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 20px;
-      height: 90%;
+      align-items: flex-start;
+      justify-content: flex-start;
+      color: black;
+      font-size: min(60vw, 20px);
+      padding: 10px;
+      height: 40%;
       border-radius: 5px;
     }
     img {
@@ -129,13 +158,16 @@
       cursor: pointer;
     }
     .commentDiv {
+      background-color: rgb(36, 38, 39);
       width: 60vw;
       max-width: 1400px;
-      border-radius: 5px;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
       padding: 5px;
-      border: solid 1px rgb(100, 100, 100);
+      border: solid 0.3px rgb(100, 100, 100);
+      border-top: none;
       display: flex;
-      flex-direction: column;
+      flex-direction: column-reverse;
       align-items: center;
       justify-content: flex-start;
       .commentSection {
@@ -146,16 +178,12 @@
         width: 60vw;
         max-width: 1400px;
         .comment {
-          margin-top: 5px;
-          display: flex;
-          align-items: flex-start;
-          padding: 5px;
-          justify-content: flex-start;
+          list-style: none;
           color: white;
-          height: 5vh;
-          max-height: 120px;
           width: 55vw;
-          max-width: 1000px;
+          max-width: 1200px;
+          margin-top: 10px;
+          font-size: min(5vh, 20px);
           border-bottom: solid 1px rgb(100, 100, 100);
         }
       }
@@ -215,6 +243,7 @@
     height: 50vh;
     color: white;
     display: flex;
+    max-height: 1000px;
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
@@ -238,120 +267,3 @@
     }
   }
 }
-
-// @media (max-width: 900px) {
-//   .PostPage {
-//     section {
-//       header {
-//         .headerClickables:hover {
-//         }
-//       }
-//       aside {
-//       }
-//       h4 {
-//       }
-//       h4:hover {
-//       }
-//       p {
-//       }
-//       img {
-//       }
-//       img:hover {
-//       }
-//       .interactions {
-//         h4 {
-//         }
-//       }
-//       .commentSection {
-//         li {
-//         }
-//       }
-//       .inputDiv {
-//         input {
-//         }
-//         button {
-//         }
-//         button:hover {
-//         }
-//       }
-//     }
-//     .loading {
-//     }
-//   }
-// }
-
-// @media (prefers-color-scheme: dark) {
-//   .PostPage {
-//     background-color: black;
-//     section {
-//       background-color: rgb(28, 28, 28);
-//       header {
-//         color: white;
-//         .headerClickables {
-//           text-shadow: none;
-//           color: white;
-//         }
-//         .headerClickables:hover {
-//           color: #ff6410;
-//         }
-//       }
-//       aside {
-//         background-color: gray;
-
-//         color: white;
-//       }
-//       h4 {
-//         color: white;
-//       }
-//       h4:hover {
-//         background-color: #ff6410;
-//         color: white;
-//       }
-//       p {
-//       }
-//       img {
-//       }
-//       img:hover {
-//       }
-//       .interactions {
-//         height: 10vh;
-//         background-color: rgb(28, 28, 28);
-//         h4 {
-//         }
-//         .date {
-//           font-weight: bolder;
-//         }
-//         .date:hover {
-//           background-color: rgb(28, 28, 28);
-//           color: white;
-//         }
-//       }
-//       .commentSection {
-//         margin-top: 5vh;
-//         background-color: black;
-//         li {
-//           color: white;
-//         }
-//       }
-//       .inputDiv {
-//         input {
-//         }
-//         button {
-//         }
-//         button:hover {
-//         }
-//       }
-//     }
-//     .loading {
-//     }
-//   }
-// }
-
-// @keyframes fadeIn {
-//   0% {
-//     opacity: 0;
-//   }
-//   100% {
-//     opacity: 1;
-//   }
-// }
