--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     .pageTitle {
-      font-size: 50px;
+      font-size: min(15vw, 30px);
       color: rgb(191, 63, 27);
     }
     h2 {
@@ -99,7 +99,6 @@
             justify-content: center;
             flex-direction: column;
             button {
-              background-color: green;
             }
           }
           h1 {
@@ -121,6 +120,7 @@
             padding: 5px;
             border-radius: 3px;
             color: rgb(200, 200, 200);
+            font-size: min(90%, 20px);
           }
           ::-webkit-scrollbar {
             display: none;
