--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -167,65 +167,57 @@
   }
 
   .footer {
-    margin-top: 10px;
-    width: 100%;
-    background-color: red;
+    width: 100vw;
     height: 200px;
     max-width: 3000px;
     display: flex;
     color: white;
+    margin-top: 10px;
+    border-right: solid 0.5px rgb(100, 100, 100);
+    border-left: solid 0.5px rgb(100, 100, 100);
     .theFooter {
-      background-color: rgb(64, 32, 60);
-      background-color: rgb(36, 30, 60);
-
+      background-color: rgb(16, 18, 19);
       display: flex;
-      height: 350px;
+      height: 200px;
       width: 100vw;
       flex-direction: column;
       .upperSection {
         display: flex;
         height: 90%;
         align-items: center;
+        border-top: solid 1px rgb(100, 100, 100);
         h3 {
+          color: rgb(191, 63, 27);
           width: 100%;
           font-size: larger;
           font-weight: bold;
           padding-left: 10%;
-          text-decoration: underline;
         }
         #headings {
-          border-bottom: solid 1px white;
-          border-right: solid 1px white;
+          border-right: solid 1px rgb(100, 100, 100);
         }
         .footerSection1 {
           height: 100%;
           width: 45%;
 
           .contactSection {
-            height: 90%;
+            height: 80%;
             display: flex;
             justify-content: space-evenly;
+            align-items: center;
             .contactSection1 {
               width: 45%;
+              height: 100%;
 
+              width: 100%;
               .infoSection {
-                height: 90%;
+                height: 80%;
+                width: 100%;
+
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-evenly;
-              }
-            }
-            .contactSection2 {
-              width: 45%;
-              border-left: solid 1px white;
-
-              .infoSection {
-                height: 90%;
-                flex-direction: column;
-                display: flex;
-                justify-content: space-evenly;
-                align-items: center;
               }
             }
           }
@@ -243,7 +235,7 @@
           .industriesDiv {
             padding-left: 10%;
             height: 90%;
-            border-left: solid 1px white;
+            border-left: solid 1px rgb(100, 100, 100);
             display: flex;
             justify-content: space-evenly;
             flex-direction: column;
@@ -261,7 +253,7 @@
           }
           .linksDiv {
             height: 90%;
-            border-left: solid 1px white;
+            border-left: solid 1px rgb(100, 100, 100);
 
             display: flex;
             justify-content: space-evenly;
@@ -274,7 +266,7 @@
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-        border-top: solid 1px white;
+        border-top: solid 1px rgb(100, 100, 100);
         h4:hover {
           cursor: pointer;
         }
