--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -178,13 +178,43 @@
         width: 60vw;
         max-width: 1400px;
         .comment {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
           list-style: none;
           color: white;
           width: 55vw;
           max-width: 1200px;
           margin-top: 10px;
           font-size: min(5vh, 20px);
+          border-radius: 5px;
           border-bottom: solid 1px rgb(100, 100, 100);
+          background-color: rgb(16, 18, 19);
+          .commentLeftSide {
+            background-color: rgb(16, 18, 19);
+            font-size: 15px;
+            height: 90%;
+            border-radius: 0%;
+            min-width: 10px;
+            max-width: 120px;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            color: rgb(100, 100, 100);
+          }
+          .commentRightSide {
+            color: white;
+            background-color: rgb(16, 18, 19);
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+            height: 90%;
+            max-width: 800px;
+            border-radius: 0%;
+            overflow-wrap: break-word;
+            font-size: min(40px, 15px);
+          }
         }
       }
       .inputDiv {
