--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -180,7 +180,7 @@
         .comment {
           display: flex;
           justify-content: flex-start;
-          align-items: center;
+          align-items: flex-start;
           list-style: none;
           color: white;
           width: 55vw;
@@ -190,30 +190,35 @@
           border-radius: 5px;
           border-bottom: solid 1px rgb(100, 100, 100);
           background-color: rgb(16, 18, 19);
+
           .commentLeftSide {
             background-color: rgb(16, 18, 19);
             font-size: 15px;
-            height: 90%;
             border-radius: 0%;
-            min-width: 10px;
-            max-width: 120px;
             display: flex;
             justify-content: flex-start;
             align-items: center;
             color: rgb(100, 100, 100);
+            min-height: 5vh;
+            max-height: 150px;
+            max-width: 100px;
           }
+
           .commentRightSide {
             color: white;
             background-color: rgb(16, 18, 19);
             display: flex;
             justify-content: flex-start;
-            align-items: center;
+            align-items: flex-start; /* Align items to the start of the container */
             width: 100%;
-            height: 90%;
             max-width: 800px;
             border-radius: 0%;
-            overflow-wrap: break-word;
+            overflow-wrap: break-word; /* Ensures long words break */
+            word-wrap: break-word; /* Legacy support for older browsers */
+            word-break: break-word; /* Ensures any word breaks */
             font-size: min(40px, 15px);
+            min-height: 5vh;
+            white-space: normal; /* Ensures text wraps to a new line */
           }
         }
       }
