--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -75,11 +75,20 @@
         width: 25vw;
         height: 10vh;
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         flex-direction: column;
         border-radius: 7px;
         border: solid 1px rgb(100, 100, 100);
+        max-width: 800px;
+        padding: 5px;
+        overflow-wrap: break-word; /* Ensures long words break */
+        word-wrap: break-word; /* Legacy support for older browsers */
+        word-break: break-word; /* Ensures any word breaks */
+        font-size: min(40px, 15px);
+        min-height: 5vh;
+        white-space: normal; /* Ensures text wraps to a new line */
+        overflow-y: scroll;
       }
 
       aside {
@@ -196,141 +205,141 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .OtherUserPage {
-    section {
-      background-color: rgb(16, 18, 19);
-      header {
-        h1 {
-          text-shadow: none;
-        }
-        .profilePic {
-        }
+// @media (prefers-color-scheme: dark) {
+//   .OtherUserPage {
+//     section {
+//       background-color: rgb(16, 18, 19);
+//       header {
+//         h1 {
+//           text-shadow: none;
+//         }
+//         .profilePic {
+//         }
 
-        h6 {
-        }
+//         h6 {
+//         }
 
-        aside {
-        }
+//         aside {
+//         }
 
-        .interactions {
-          p {
-            background-color: rgb(28, 28, 28);
-            color: white;
-            border: solid 1px white;
-          }
+//         .interactions {
+//           p {
+//             background-color: rgb(28, 28, 28);
+//             color: white;
+//             border: solid 1px white;
+//           }
 
-          p:hover {
-            background-color: #ff6410;
-            color: white;
-            cursor: pointer;
-          }
-        }
-      }
+//           p:hover {
+//             background-color: #ff6410;
+//             color: white;
+//             cursor: pointer;
+//           }
+//         }
+//       }
 
-      div {
-        .post {
-          background-color: rgb(28, 28, 28);
-          border: solid 1px;
-          header {
-            border-bottom: solid 1px white;
-          }
+//       div {
+//         .post {
+//           background-color: rgb(28, 28, 28);
+//           border: solid 1px;
+//           header {
+//             border-bottom: solid 1px white;
+//           }
 
-          .postImage {
-            border: solid 1px;
-          }
+//           .postImage {
+//             border: solid 1px;
+//           }
 
-          h5 {
-            background-color: gray;
-          }
+//           h5 {
+//             background-color: gray;
+//           }
 
-          section {
-            border-top: solid 1px white;
-            p {
-            }
+//           section {
+//             border-top: solid 1px white;
+//             p {
+//             }
 
-            p:hover {
-              background-color: #ff6410;
-              color: white;
-            }
-            .date:hover {
-              background-color: rgb(28, 28, 28);
-              color: white;
-            }
-          }
-        }
-        .post:hover {
-          cursor: pointer;
-        }
-      }
-    }
-  }
-}
+//             p:hover {
+//               background-color: #ff6410;
+//               color: white;
+//             }
+//             .date:hover {
+//               background-color: rgb(28, 28, 28);
+//               color: white;
+//             }
+//           }
+//         }
+//         .post:hover {
+//           cursor: pointer;
+//         }
+//       }
+//     }
+//   }
+// }
 
-@media (max-width: 900px) {
-  .OtherUserPage {
-    section {
-      width: 100vw;
-      header {
-        width: 98vw;
-        .profilePic {
-        }
+// @media (max-width: 900px) {
+//   .OtherUserPage {
+//     section {
+//       width: 100vw;
+//       header {
+//         width: 98vw;
+//         .profilePic {
+//         }
 
-        h6 {
-          height: 10vh;
-          width: 10vh;
-        }
+//         h6 {
+//           height: 10vh;
+//           width: 10vh;
+//         }
 
-        aside {
-          height: 10vh;
-          width: 10vh;
-        }
+//         aside {
+//           height: 10vh;
+//           width: 10vh;
+//         }
 
-        .interactions {
-          height: 10vh;
-          width: 10vh;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-around;
-          p {
-            width: 90%;
-            font-size: 10px;
-          }
+//         .interactions {
+//           height: 10vh;
+//           width: 10vh;
+//           display: flex;
+//           flex-direction: column;
+//           justify-content: space-around;
+//           p {
+//             width: 90%;
+//             font-size: 10px;
+//           }
 
-          p:hover {
-          }
-        }
-      }
+//           p:hover {
+//           }
+//         }
+//       }
 
-      div {
-        width: 100vw;
-        .post {
-          width: 95vw;
-          header {
-            width: 95vw;
-            border-bottom: none;
-          }
+//       div {
+//         width: 100vw;
+//         .post {
+//           width: 95vw;
+//           header {
+//             width: 95vw;
+//             border-bottom: none;
+//           }
 
-          .postImage {
-            width: 95vw;
-          }
+//           .postImage {
+//             width: 95vw;
+//           }
 
-          h5 {
-            width: 95vw;
-          }
+//           h5 {
+//             width: 95vw;
+//           }
 
-          section {
-            width: 95vw;
-            p {
-              font-size: 11px;
-              width: 25%;
-            }
+//           section {
+//             width: 95vw;
+//             p {
+//               font-size: 11px;
+//               width: 25%;
+//             }
 
-            p:hover {
-            }
-          }
-        }
-      }
-    }
-  }
-}
+//             p:hover {
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
