--- a/src/pages/UserFriends/UserFriends.module.scss
+++ b/src/pages/UserFriends/UserFriends.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background-color: red;
 
   flex-direction: column;
   color: white;
@@ -21,11 +20,11 @@
   }
   .friendsList {
     border-radius: 5px;
-    border: solid 1px rgb(100, 100, 100);
+
     display: flex;
     flex-direction: column;
     width: 60vw;
-    background-color: black;
+
     min-height: 70vh;
     justify-content: center;
     align-items: center;
@@ -37,13 +36,14 @@
       display: none;
     }
     .friendCard {
-      background-color: rgb(28, 28, 28);
       margin: 5px;
       display: flex;
       justify-content: space-evenly;
       align-items: center;
       width: 50vw;
       padding: 10px;
+      border: solid 1px rgb(100, 100, 100);
+      border-radius: 5px;
       img {
         border-radius: 100%;
         width: 120px;
